# PostTelegram

./: .coverage  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
posts/: models.py  permission.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_post_id.py  0003_remove_commentary_post_alter_post_post_id_and_more.py  0004_alter_commentary_post.py  0005_alter_post_post_id.py  0006_delete_commentary.py  0007_remove_post_count_like.py
users/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: create_super_user.py  create_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_password.py
